fix(style): Add spacing after scroll

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -233,8 +233,10 @@ div.task-container {
   position: relative;
 }
 
-div.content {
-  padding-bottom: 170px;
+.r-side::after {
+  content: "";
+  height: 100px;
+  display: block;
 }
 
 @media only screen and (max-width: 800px) {
